--- a/beans_pipeline.ipynb
+++ b/beans_pipeline.ipynb
@@ -24,18 +24,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d0324268-6461-4a86-8e0e-754ad29d4d56",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "USER_FLAG = \"--user\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "53c8d811-a175-4837-8309-6d3401e507c5",
    "metadata": {
@@ -160,10 +148,9 @@
     }
    ],
    "source": [
-    "!pip3 install {USER_FLAG} google-cloud-pipeline-components==2.18.0\n",
-    "!pip3 install --upgrade {USER_FLAG} google-cloud-storage google-cloud-bigquery\n",
-    "!pip3 install --upgrade {USER_FLAG} google-cloud-aiplatform\n",
-    "!pip3 install {USER_FLAG} kfp google-cloud-pipeline-components"
+    "!pip3 install --quiet google-cloud-pipeline-components==2.18.0\n",
+    "!pip3 install --quiet --upgrade google-cloud-storage google-cloud-bigquery\n",
+    "!pip3 install --quiet --upgrade google-cloud-aiplatform kfp google-cloud-pipeline-components"
    ]
   },
   {
@@ -274,189 +261,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1295abe0-0678-49a3-a501-0b3cf0065b31",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/tmp/ipykernel_5449/4080335524.py:1: DeprecationWarning: output_component_file parameter is deprecated and will eventually be removed. Please use `Compiler().compile()` to compile a component instead.\n",
-      "  @component(base_image=\"python:3.9\", output_component_file=\"first-component.yaml\")\n",
-      "/var/tmp/ipykernel_5449/4080335524.py:2: DeprecationWarning: output_component_file parameter is deprecated and will eventually be removed. Please use `Compiler().compile()` to compile a component instead.\n",
-      "  def product_name(text: str) -> str:\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create component and create yml file instantly (whic shoud be modified)\n",
-    "@component(\n",
-    "    base_image=\"python:3.9\", output_component_file=\"first-component.yaml\"\n",
-    ")\n",
-    "def product_name(text: str) -> str:\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e8bf1812-1530-4b6e-a8ea-d0c9519d41bf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# read component\n",
-    "product_name_component = kfp.components.load_component_from_file(\n",
-    "    \"./first-component.yaml\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "23386175-2b24-411a-8f75-e9e880dfca08",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# create another component\n",
-    "@component(base_image=\"python:3.9\", packages_to_install=[\"emoji\"])\n",
-    "def emoji(\n",
-    "    text: str,\n",
-    ") -> NamedTuple(\n",
-    "    \"Outputs\",\n",
-    "    [\n",
-    "        (\"emoji_text\", str),  # Return parameters\n",
-    "        (\"emoji\", str),\n",
-    "    ],\n",
-    "):\n",
-    "    import emoji\n",
-    "\n",
-    "    emoji_text = text\n",
-    "    emoji_str = emoji.emojize(\":\" + emoji_text + \":\", language=\"alias\")\n",
-    "    print(\"output one: {}; output_two: {}\".format(emoji_text, emoji_str))\n",
-    "    return (emoji_text, emoji_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "38a3e97b-4b0e-489d-b009-f9e28436f9f1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "@component(base_image=\"python:3.9\")\n",
-    "def build_sentence(product: str, emoji: str, emojitext: str) -> str:\n",
-    "    print(\"We completed the pipeline, hooray!\")\n",
-    "    end_str = product + \" is \"\n",
-    "    if len(emoji) > 0:\n",
-    "        end_str += emoji\n",
-    "    else:\n",
-    "        end_str += emojitext\n",
-    "    return end_str"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "b8da5f82-0243-4886-a84d-d6f0108a0284",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "@pipeline(\n",
-    "    name=\"hello-world\",\n",
-    "    description=\"An intro pipeline\",\n",
-    "    pipeline_root=PIPELINE_ROOT,\n",
-    ")\n",
-    "\n",
-    "# You can change the `text` and `emoji_str` parameters here to update the pipeline output\n",
-    "def intro_pipeline(\n",
-    "    text: str = \"Vertex Pipelines\", emoji_str: str = \"sparkles\"\n",
-    "):\n",
-    "    product_task = product_name(text=text)\n",
-    "    emoji_task = emoji(text=emoji_str)\n",
-    "    consumer_task = build_sentence(\n",
-    "        product=product_task.output,\n",
-    "        emoji=emoji_task.outputs[\"emoji\"],\n",
-    "        emojitext=emoji_task.outputs[\"emoji_text\"],\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "2a2d936e-7836-43c3-893f-66a8b1f8cf4f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# compile pipeline\n",
-    "compiler.Compiler().compile(\n",
-    "    pipeline_func=intro_pipeline, package_path=\"intro_pipeline_job.yml\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "d4efe043-3af2-4f47-9c68-206e4cde6294",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# define our job\n",
-    "\n",
-    "from datetime import datetime\n",
-    "\n",
-    "TIMESTAMP = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
-    "\n",
-    "\n",
-    "job = aiplatform.PipelineJob(\n",
-    "    display_name=\"hello-world-pipeline\",\n",
-    "    template_path=\"intro_pipeline_job.json\",\n",
-    "    job_id=\"hello-world-pipeline-{0}\".format(TIMESTAMP),\n",
-    "    enable_caching=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "e99d2b28-ce25-4ad4-ad22-964422d55c23",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'job' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# run the job\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mjob\u001b[49m\u001b[38;5;241m.\u001b[39msubmit()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'job' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# run the job\n",
-    "job.submit()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "id": "cbdf2d16-1249-4ce4-958c-350782edba90",
    "metadata": {
@@ -475,6 +279,7 @@
     }
    ],
    "source": [
+    "# base image is defined for every component\n",
     "@component(\n",
     "    base_image=\"gcr.io/deeplearning-platform-release/tf2-cpu.2-3:latest\",\n",
     "    output_component_file=\"tabular_eval_component.yaml\",\n",
@@ -495,7 +300,7 @@
     "\n",
     "    from google.cloud import aiplatform as aip\n",
     "\n",
-    "    # Fetch model eval info\n",
+    "    # Fetch model eval info - list metrics\n",
     "    def get_eval_info(client, model_name):\n",
     "        from google.protobuf.json_format import MessageToDict\n",
     "\n",
@@ -521,6 +326,7 @@
     "\n",
     "    # Use the given metrics threshold(s) to determine whether the model is\n",
     "    # accurate enough to deploy.\n",
+    "    # get info about threshold for each metric and compare with final value\n",
     "    def classification_thresholds_check(metrics_dict, thresholds_dict):\n",
     "        for k, v in thresholds_dict.items():\n",
     "            logging.info(\"k {}, v {}\".format(k, v))\n",
@@ -533,6 +339,7 @@
     "        logging.info(\"threshold checks passed.\")\n",
     "        return True\n",
     "\n",
+    "    # collect several metrics to add them to logs\n",
     "    def log_metrics(metrics_list, metricsc):\n",
     "        test_confusion_matrix = metrics_list[0][\"confusionMatrix\"]\n",
     "        logging.info(\"rows: %s\", test_confusion_matrix[\"rows\"])\n",
@@ -581,9 +388,11 @@
     "    )\n",
     "    logging.info(\"got evaluation name: %s\", eval_name)\n",
     "    logging.info(\"got metrics list: %s\", metrics_list)\n",
+    "    # return metrics to logger\n",
     "    log_metrics(metrics_list, metricsc)\n",
-    "\n",
+    "    # get threshold\n",
     "    thresholds_dict = json.loads(thresholds_dict_str)\n",
+    "    # check if requirements are met.\n",
     "    deploy = classification_thresholds_check(metrics_list[0], thresholds_dict)\n",
     "    if deploy:\n",
     "        dep_decision = \"true\"\n",
@@ -613,11 +422,7 @@
    "source": [
     "import time\n",
     "\n",
-    "\n",
-    "\n",
     "DISPLAY_NAME = \"automl-beans{}\".format(str(int(time.time())))\n",
-    "\n",
-    "\n",
     "print(DISPLAY_NAME)"
    ]
   },
@@ -654,6 +459,7 @@
     "    description=\"An intro pipeline\",\n",
     "    pipeline_root=PIPELINE_ROOT,\n",
     ")\n",
+    "# define pipeline\n",
     "def pipeline(\n",
     "    bq_source: str = \"bq://aju-dev-demos.beans.beans1\",\n",
     "    display_name: str = DISPLAY_NAME,\n",
@@ -662,13 +468,11 @@
     "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
     "    thresholds_dict_str: str = '{\"auRoc\": 0.95}',\n",
     "):\n",
-    "\n",
-    "\n",
+    "    # get source dataset\n",
     "    dataset_create_op = TabularDatasetCreateOp(\n",
     "        project=project, display_name=display_name, bq_source=bq_source\n",
     "    )\n",
-    "\n",
-    "\n",
+    "    # train model\n",
     "    training_op = AutoMLTabularTrainingJobRunOp(\n",
     "        project=project,\n",
     "        display_name=display_name,\n",
@@ -686,7 +490,6 @@
     "            {\"numeric\": {\"column_name\": \"Extent\"}},\n",
     "            {\"numeric\": {\"column_name\": \"Solidity\"}},\n",
     "            {\"numeric\": {\"column_name\": \"roundness\"}},\n",
-    "\n",
     "            {\"numeric\": {\"column_name\": \"Compactness\"}},\n",
     "            {\"numeric\": {\"column_name\": \"ShapeFactor1\"}},\n",
     "            {\"numeric\": {\"column_name\": \"ShapeFactor2\"}},\n",
@@ -697,30 +500,24 @@
     "        dataset=dataset_create_op.outputs[\"dataset\"],\n",
     "        target_column=\"Class\",\n",
     "    )\n",
-    "\n",
-    "\n",
+    "    # evaluate model metrics\n",
     "    model_eval_task = classification_model_eval_metrics(\n",
     "        project=project,\n",
     "        location=gcp_region,\n",
     "        api_endpoint=api_endpoint,\n",
-    "\n",
     "        thresholds_dict_str=thresholds_dict_str,\n",
     "        model=training_op.outputs[\"model\"],\n",
     "    )\n",
-    "\n",
-    "\n",
+    "    # if validation succeeded, create endpoint and deploy model there\n",
     "    with dsl.If(\n",
     "        model_eval_task.outputs[\"dep_decision\"] == \"true\",\n",
     "        name=\"deploy_decision\",\n",
     "    ):\n",
-    "\n",
-    "\n",
     "        endpoint_op = EndpointCreateOp(\n",
     "            project=project,\n",
     "            location=gcp_region,\n",
     "            display_name=\"train-automl-beans\",\n",
     "        )\n",
-    "\n",
     "\n",
     "        ModelDeployOp(\n",
     "            model=training_op.outputs[\"model\"],\n",
@@ -740,6 +537,7 @@
    },
    "outputs": [],
    "source": [
+    "# compile - create pipeline file\n",
     "compiler.Compiler().compile(\n",
     "    pipeline_func=pipeline, package_path=\"tab_classif_pipeline.json\"\n",
     ")"
@@ -754,6 +552,9 @@
    },
    "outputs": [],
    "source": [
+    "# define pipeline based on:\n",
+    "# template - in bucket\n",
+    "# pipeline root - path to bucket and subfloder\n",
     "ml_pipeline_job = aiplatform.PipelineJob(\n",
     "    display_name=\"automl-tab-beans-training\",\n",
     "    template_path=\"tab_classif_pipeline.json\",\n",
@@ -785,6 +586,7 @@
     }
    ],
    "source": [
+    "# run job based on created pipeline\n",
     "ml_pipeline_job.submit()"
    ]
   }
