--- a/beans_pipeline.ipynb
+++ b/beans_pipeline.ipynb
@@ -2,28 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "490cb682-1201-40b1-990a-fef869a548d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO - update depreciated command creating yml file (first kfp creted)\n",
-    "# TODO - create variables used later"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62252f34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BUCKET_NAME = \"gs://[name of your bucket]\"\n",
-    "PROJECT_ID = \"[your project id]\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "53c8d811-a175-4837-8309-6d3401e507c5",
    "metadata": {
@@ -149,8 +127,7 @@
    ],
    "source": [
     "!pip3 install --quiet google-cloud-pipeline-components==2.18.0\n",
-    "!pip3 install --quiet --upgrade google-cloud-storage google-cloud-bigquery\n",
-    "!pip3 install --quiet --upgrade google-cloud-aiplatform kfp google-cloud-pipeline-components"
+    "!pip3 install --quiet --upgrade google-cloud-storage google-cloud-bigquery google-cloud-aiplatform kfp google-cloud-pipeline-components"
    ]
   },
   {
@@ -170,6 +147,19 @@
     "\n",
     "    app = IPython.Application.instance()\n",
     "    app.kernel.do_shutdown(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62252f34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BUCKET_NAME = \"gs://[name of your bucket]\"\n",
+    "PROJECT_ID = \"[your project id]\"\n",
+    "PIPELINE_NAME = \"[name of your pipeline]\"\n",
+    "FINAL_MODEL_NAME = \"[your final model name]\""
    ]
   },
   {
@@ -455,14 +445,14 @@
    "outputs": [],
    "source": [
     "@pipeline(\n",
-    "    name=\"automl-tab-beans-training-v2\",\n",
+    "    name=PIPELINE_NAME,\n",
     "    description=\"An intro pipeline\",\n",
     "    pipeline_root=PIPELINE_ROOT,\n",
     ")\n",
     "# define pipeline\n",
     "def pipeline(\n",
     "    bq_source: str = \"bq://aju-dev-demos.beans.beans1\",\n",
-    "    display_name: str = DISPLAY_NAME,\n",
+    "    display_name: str = FINAL_MODEL_NAME,\n",
     "    project: str = PROJECT_ID,\n",
     "    gcp_region: str = \"us-central1\",\n",
     "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
@@ -559,7 +549,7 @@
     "    display_name=\"automl-tab-beans-training\",\n",
     "    template_path=\"tab_classif_pipeline.json\",\n",
     "    pipeline_root=PIPELINE_ROOT,\n",
-    "    parameter_values={\"project\": PROJECT_ID, \"display_name\": DISPLAY_NAME},\n",
+    "    parameter_values={\"project\": PROJECT_ID, \"display_name\": FINAL_MODEL_NAME},\n",
     "    enable_caching=True,\n",
     ")"
    ]
