--- a/beans_pipeline.ipynb
+++ b/beans_pipeline.ipynb
@@ -126,8 +126,7 @@
     }
    ],
    "source": [
-    "!pip3 install --quiet google-cloud-pipeline-components==2.18.0\n",
-    "!pip3 install --quiet --upgrade google-cloud-storage google-cloud-bigquery google-cloud-aiplatform kfp==2.7.0 google-cloud-pipeline-components"
+    "!pip3 install --quiet --upgrade google-cloud-pipeline-components==2.18.0 google-cloud-storage google-cloud-bigquery google-cloud-aiplatform kfp==2.7.0 google-cloud-pipeline-components"
    ]
   },
   {
