update logic flow

--- a/beans_pipeline.ipynb
+++ b/beans_pipeline.ipynb
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "import kfp\n",
-    "\n",
+    "from kfp.registry import RegistryClient\n",
     "from kfp import compiler, dsl\n",
     "from kfp.dsl import (\n",
     "    component,\n",
@@ -534,6 +534,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "11e650d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# upload pipeline to container registry\n",
+    "client = RegistryClient(\n",
+    "    host=f\"https://us-central1-kfp.pkg.dev/learn-vertex-pipelines/kubeflow\"\n",
+    ")\n",
+    "\n",
+    "templateName, versionName = client.upload_pipeline(\n",
+    "    file_name=\"tab_classif_pipeline.yaml\",\n",
+    "    tags=[\"v1\", \"latest\"],\n",
+    "    extra_headers={\"description\": \"Beans pipeline template.\"},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "id": "3a49f9c6-570a-4a48-8a3b-68029adc4ac0",
    "metadata": {
@@ -544,13 +563,13 @@
     "# define pipeline based on:\n",
     "# template - in bucket\n",
     "# pipeline root - path to bucket and subfloder\n",
-    "ml_pipeline_job = aiplatform.PipelineJob(\n",
-    "    display_name=\"automl-tab-beans-training\",\n",
-    "    template_path=\"tab_classif_pipeline.json\",\n",
-    "    pipeline_root=PIPELINE_ROOT,\n",
-    "    parameter_values={\"project\": PROJECT_ID, \"display_name\": FINAL_MODEL_NAME},\n",
-    "    enable_caching=True,\n",
-    ")"
+    "# ml_pipeline_job = aiplatform.PipelineJob(\n",
+    "#     display_name=\"automl-tab-beans-training\",\n",
+    "#     template_path=\"tab_classif_pipeline.json\",\n",
+    "#     pipeline_root=PIPELINE_ROOT,\n",
+    "#     parameter_values={\"project\": PROJECT_ID, \"display_name\": FINAL_MODEL_NAME},\n",
+    "#     enable_caching=True,\n",
+    "# )"
    ]
   },
   {
@@ -576,7 +595,21 @@
    ],
    "source": [
     "# run job based on created pipeline\n",
-    "ml_pipeline_job.submit()"
+    "# ml_pipeline_job.submit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aab9b8b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retrieve model (to write it for example to bucket)\n",
+    "# model_id = (\n",
+    "#     \"projects/362814667402/locations/europe-west4/models/2293999069959290880\"\n",
+    "# )\n",
+    "# model = aiplatform.Model(model_id)"
    ]
   }
  ],
