change from json to yaml

--- a/beans_pipeline.ipynb
+++ b/beans_pipeline.ipynb
@@ -528,7 +528,7 @@
    "source": [
     "# compile - create pipeline file\n",
     "compiler.Compiler().compile(\n",
-    "    pipeline_func=pipeline, package_path=\"tab_classif_pipeline.json\"\n",
+    "    pipeline_func=pipeline, package_path=\"tab_classif_pipeline.yaml\"\n",
     ")"
    ]
   },
